--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "autoprefixer-loader": "^1.0.0",
     "css-loader": "^0.9.0",
     "jsx-loader": "^0.12.2",
+    "lodash-node": "^2.4.1",
     "normalize.css": "^3.0.2",
     "sass-loader": "^0.3.1",
     "style-loader": "^0.8.2",
