--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-router": "^0.11.6"
   },
   "dependencies": {
-    "react": "^0.12.2"
+    "react": "^0.12.2",
+    "react-markdown-to-html": "^1.0.4"
   }
 }
