--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "scripts": {
     "start": "cd examples && webpack-dev-server --d --hot --inline --progress --colors",
-    "build": "./node_modules/jsx-loader/node_modules/.bin/jsx --harmony --no-cache-dir -x jsx src lib"
+    "build": "./node_modules/jsx-loader/node_modules/.bin/jsx --harmony --no-cache-dir -x jsx src lib",
+    "build-www": "cd examples && webpack"
   },
   "main": "lib/index.js",
   "author": "James Coleman",
@@ -16,8 +17,10 @@
   "devDependencies": {
     "autoprefixer-loader": "^1.0.0",
     "css-loader": "^0.9.0",
+    "html-loader": "^0.2.3",
     "jsx-loader": "^0.12.2",
     "lodash-node": "^2.4.1",
+    "markdown-loader": "^0.1.2",
     "normalize.css": "^3.0.2",
     "sass-loader": "^0.3.1",
     "style-loader": "^0.8.2",
@@ -28,7 +31,6 @@
     "react-router": "^0.11.6"
   },
   "dependencies": {
-    "react": "^0.12.2",
-    "react-markdown-to-html": "^1.0.4"
+    "react": "^0.12.2"
   }
 }
