--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-scrollbar",
+  "name": "react-scrollbars",
   "version": "0.0.1",
   "description": "",
   "scripts": {
@@ -11,9 +11,9 @@
   "author": "James Coleman",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/ojame/react-scrollbar/issues"
+    "url": "https://github.com/ojame/react-scrollbars/issues"
   },
-  "homepage": "https://github.com/ojame/react-scrollbar",
+  "homepage": "https://github.com/ojame/react-scrollbars",
   "devDependencies": {
     "autoprefixer-loader": "^1.0.0",
     "css-loader": "^0.9.0",
