--- a/package.json
+++ b/package.json
@@ -27,8 +27,7 @@
     "url-loader": "^0.5.5",
     "webpack": "^1.4.13",
     "webpack-dev-server": "^1.6.6",
-    "react-hot-loader": "^1.1.1",
-    "react-router": "^0.11.6"
+    "react-hot-loader": "^1.1.1"
   },
   "dependencies": {
     "react": "^0.12.2"
