--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "react-scrollbars",
-  "version": "0.0.1",
-  "description": "",
+  "version": "0.0.2",
+  "description": "Stateful scrollbar component for React",
   "scripts": {
     "start": "cd examples && webpack-dev-server --d --hot --inline --progress --colors",
     "build": "./node_modules/jsx-loader/node_modules/.bin/jsx --harmony --no-cache-dir -x jsx src lib",
