--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "autoprefixer-loader": "^1.0.0",
     "css-loader": "^0.9.0",
     "html-loader": "^0.2.3",
-    "jsx-loader": "^0.12.2",
+    "jsx-loader": ">=0.12.2",
     "markdown-loader": "^0.1.2",
     "normalize.css": "^3.0.2",
     "sass-loader": "^0.3.1",
@@ -33,7 +33,7 @@
     "react-hot-loader": "^1.1.1"
   },
   "dependencies": {
-    "react": "^0.12.2",
+    "react": ">=0.12.2",
     "lodash-node": "^2.4.1"
   }
 }
